# rust-hello-world

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  create-release.sh  installer.sh
.github/workflows/: release.yml
